@@ -1,4 +1,5 @@
 0.3.0:
+* chs: new module (Character Set)
 * crc: word crc-calc-crc32 renamed to crc+calc-crc32
 * crc: word crc-calc-poly renamed to crc+calc-poly
 * md5: new module (MD5 Algorithm)
